samples/_failures_safe/1761601433_82abb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6fed37bc.c: In function ‘main’:
./samples/SAFE/__tmp_6fed37bc.c:160:1: error: expected declaration or statement at end of input
  160 | int main(void) {
      | ^~~
